--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,12 +28,12 @@ unbind '"' # Split horizontally
 bind v split-window -h -c "#{pane_current_path}"
 bind h split-window -v -c "#{pane_current_path}"
 
-# Switch windows with Ctrl+Shift+L/R. Create window with Ctrl+Shift+T
+# Switch windows with Shift+L/R. Create window with Ctrl+Shift+T
 unbind p
 unbind n
 unbind c
-bind -n C-S-Right next-window
-bind -n C-S-Left previous-window
+bind -n S-Right next-window
+bind -n S-Left previous-window
 bind -n C-T new-window -c "#{pane_current_path}"
 
 unbind -T copy-mode-vi Space; #Default for begin-selection
@@ -42,3 +42,8 @@ unbind -T copy-mode-vi Enter; #Default for copy-selection
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel --clipboard"
 
+set -g @resurrect-strategy-nvim 'session'
+set -g @resurrect-capture-pane-contents 'on'
+
+run-shell ~/.config/tmux/plugins/resurrect.tmux
+run-shell ~/.config/tmux/plugins/continuum.tmux
