--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,7 @@ set-window-option -g mode-keys vi
 set -g history-limit 10000
 
 # Fix terminal and nvim colors with tmux
-set-option -g default-terminal "screen-256color"
+set-option -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ',xterm-256color:Tc'
 set -as terminal-overrides ',xterm*:sitm=\E[3m'
 set -ga terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
@@ -13,10 +13,17 @@ set -ga terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 unbind C-b
 set -g prefix C-Space
 
-bind -n C-h "select-pane -L"
-bind -n C-j "select-pane -D"
-bind -n C-k "select-pane -U"
-bind -n C-l "select-pane -R"
+unbind -n C-h
+unbind -n C-j
+unbind -n C-k
+unbind -n C-l
+unbind -n C-l
+unbind -T prefix l
+bind -n C-H "select-pane -L"
+bind -n C-J "select-pane -D"
+bind -n C-K "select-pane -U"
+bind -n C-L "select-pane -R"
+bind -n C-l "send-keys C-l"
 
 # v and h are not binded by default, but we never know in the next versions...
 unbind v
@@ -35,6 +42,8 @@ unbind c
 bind -n S-Right next-window
 bind -n S-Left previous-window
 bind -n C-T new-window -c "#{pane_current_path}"
+bind -n C-S-Right "swap-window -t +1; next-window"
+bind -n C-S-Left "swap-window -t -1; previous-window"
 
 unbind -T copy-mode-vi Space; #Default for begin-selection
 unbind -T copy-mode-vi Enter; #Default for copy-selection
@@ -45,5 +54,5 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel --clipboard"
 set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
 
-run-shell ~/.config/tmux/plugins/resurrect.tmux
-run-shell ~/.config/tmux/plugins/continuum.tmux
+run-shell ~/.config/tmux/plugins/tmux-resurrect/resurrect.tmux
+run-shell ~/.config/tmux/plugins/continuum/continuum.tmux
