--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule ".config/nvim/pack/plugins/start/vim-obsession"]
 	path = .config/nvim/pack/plugins/start/vim-obsession
 	url = https://github.com/tpope/vim-obsession.git
+[submodule ".config/nvim/pack/plugins/start/vim-gutentags"]
+	path = .config/nvim/pack/plugins/start/vim-gutentags
+	url = https://github.com/ludovicchabant/vim-gutentags.git
